src-ken&y/objects/Facility_Item__c.object
<CustomObject>
    <customHelpPage>HelpFacilityItem</customHelpPage>
    <description>Facility specific Item information</description>
    <fields>
        <fullName>ABC_Code__c</fullName>
        <description>Priority code that classifies this item by its relative impact on inventory value. A is highest impact; C is lowest impact. Used primarily for cycle count frequency.</description>
        <inlineHelpText>If you cycle count using the ABC method, you can identify the item as A, B, or C on the Item detail page. To set up the intervals between cycle counts, go to the Company page.</inlineHelpText>
        <label>ABC Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Item if checked; Used to phase out a item. If item is inactive, a P.O. or W.O. can not be placed against item but the QOH can be used.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregation_Days__c</fullName>
        <label>Aggregation Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Facility Items</relationshipLabel>
        <relationshipName>Facility_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Item description can be up to 255 characters; use extended description field if needed</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EOQ__c</fullName>
        <description>Economic Order Quantity: Optimum quantity to make or buy at one time : EOQ is determined by opitmizing the cost incurred to place each order for this item with the carrying cost of holding these items in stock.</description>
        <label>EOQ</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility_Item_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Facility Item Unique</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility</description>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Facility Company must match Facility Item Company</errorMessage>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Facility Items</relationshipLabel>
        <relationshipName>Facility_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>Master relationship to Item</description>
        <label>Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Item Company must match Facility Item Company</errorMessage>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Facility Items</relationshipLabel>
        <relationshipName>Facility_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Cycle_Count__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date item was last cycle counted</description>
        <inlineHelpText>Date item was last cycle counted</inlineHelpText>
        <label>Last Cycle Count</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <description>For purchased or outsourced items, the number of mfg days to get item into inventory from the time it&apos;s ordered; for manufactured items, total number mfg days</description>
        <label>Lead Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Cycle_Count_Date__c</fullName>
        <description>Date for next cycle based on last cycle count date + number of days corresponding to ABC code from the Company</description>
        <formula>Last_Cycle_Count__c + IF(ISPICKVAL(ABC_Code__c, &quot;A&quot;), (IF(ISBLANK(Facility__r.A_Days__c), BLANKVALUE(Company__r.A_Days__c, 0), Facility__r.A_Days__c)), IF(ISPICKVAL( ABC_Code__c , &quot;B&quot;),  (IF(ISBLANK(Facility__r.B_Days__c), BLANKVALUE(Company__r.B_Days__c, 0), Facility__r.B_Days__c)),  (IF(ISBLANK(Facility__r.C_Days__c), BLANKVALUE(Company__r.C_Days__c, 0), Facility__r.C_Days__c)) ) )</formula>
        <label>Next Cycle Count Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ordering_Multiple__c</fullName>
        <description>Ordering multiple is used by MRP in planning orders; for example, if multiple is 25 and the actual demand is 70, then the system will suggest an order of 75</description>
        <label>Ordering Multiple</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Safety_Stock__c</fullName>
        <description>The amount of stock over and above what is forecast to be required so as to provide stock availaility for customer service or other miscellaneous uses not forecast in the Master Plan to the MRP i.e, Buffer stock.</description>
        <label>Safety Stock</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shrinkage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The % of an item expected to be unusable or defective. (MRP inflates planned orders to cover shrinkage.) For example, 10 % shrinkage would be entered as 10</description>
        <label>Shrinkage</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Manufactured</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Phantom</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Lot_Sizing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, safety stock, EOQ, ordering multiple, and shrinkage factor are used when MRP plans orders; if cleared, lot for lot technique is used</description>
        <label>Use Lot Sizing</label>
        <type>Checkbox</type>
    </fields>
    <label>Facility Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Facility Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>